fix #37056: z-index workaround not needed anymore

--- a/fluxx.css
+++ b/fluxx.css
@@ -629,8 +629,6 @@
 
 .flx-other-players .flx-keepers-my {
   min-width: 320px;
-  z-index: 999;
-  /* workaround: discard pile hidden height prevents keeper tooltips/selection? */
 }
 
 .flx-other-players .flx-keepers-other {
